Fixes #12 - adds no-wrap to table rows

--- a/app/sass/objects/_table.scss
+++ b/app/sass/objects/_table.scss
@@ -7,6 +7,7 @@ table{
     border-collapse: collapse;
     border-spacing: 0;
     overflow-x: auto;
+    white-space: nowrap;
 
     /**
      * Force all cells within a table to occupy the same width as each other.
